syntax = "proto3";
package warden.intent;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/warden-protocol/wardenprotocol/warden/x/intent/types";

message Approver {
  // address is the address of the approver
  string address = 1;
  // approved_at is a timestamp specifying when the approver approved an action
  google.protobuf.Timestamp approved_at = 2
      [(gogoproto.nullable) = false, (amino.dont_omitempty) = true, (gogoproto.stdtime) = true];
}

// Action wraps a message that needs to be approved by a set of approvers.
message Action {
  uint64 id = 1;
  repeated Approver approvers = 2;
  ActionStatus status = 3;
  // Optional intent id that must be satisfied by the approvers.
  // If not specified, it's up to the creator of the action to decide what to
  // apply.
  uint64 intent_id = 4;
  // Original message that started the action, it will be executed when the
  // intent is satisfied.
  google.protobuf.Any msg = 5;
  // Result of the action, it will be set when the action is completed.
  google.protobuf.Any result = 6;
  string creator = 7;
  // BTL (blocks to live) is the block height up until this action can be
  // approved or rejected.
  uint64 btl = 8;
  // created_at is a timestamp specifying when the action was created
  google.protobuf.Timestamp created_at = 9
      [(gogoproto.nullable) = false, (amino.dont_omitempty) = true, (gogoproto.stdtime) = true];
  // updated_at is a timestamp specifying when the action's status was updated
  google.protobuf.Timestamp updated_at = 10
      [(gogoproto.nullable) = false, (amino.dont_omitempty) = true, (gogoproto.stdtime) = true];
}

// MsgActionCreated is returned by rpc that creates an action.
message MsgActionCreated {
  Action action = 1;
}

// Current status of an action.
enum ActionStatus {
  // Unspecified status.
  ACTION_STATUS_UNSPECIFIED = 0;

  // Action is pending approval. This is the initial status.
  ACTION_STATUS_PENDING = 1;

  // Intent has been satified, action has been executed.
  ACTION_STATUS_COMPLETED = 2;

  // Action has been revoked by its creator.
  ACTION_STATUS_REVOKED = 3;

  // Action has been rejected since Btl is expired
  ACTION_STATUS_TIMEOUT = 4;
}
